--- a/views/tipLib.jade
+++ b/views/tipLib.jade
@@ -52,7 +52,7 @@ append body
 								div.col-xs-12.col-sm-12.col-md-12.col-lg-12
 									div#navDescWrapper(ng-bind-html='tip.tipDescJson[1].tipDescription  | to_trusted' style='margin-left:-10px;padding-right: 10px;')
 						
-			.col-xs-6.col-sm-6.col-md-6.col-lg-6
+			.col-xs-6.col-sm-6.col-md-6.col-lg-6#middleDivTipLib
 				a.minimize.hover(ng-click='filtersToggle=!filtersToggle' ng-model='filtersToggle' ng-show='!filtersToggle') Show Filters
 				a.minimize.hover(ng-click='filtersToggle=!filtersToggle' ng-model='filtersToggle' ng-show='filtersToggle') Hide Filters
 				.row.filterBoxStyle#stickyheader(ng-style="filtersBoxStyle" ng-show='filtersToggle')
@@ -359,7 +359,8 @@ append body
 				
 				.errorDiv(ng-bind="responseData")
 			#stickyaliasNavLeft
-			#stickyheaderNavRight.col-xs-3.col-sm-3.col-md-3.col-lg-3
+			a.minimize(ng-click='toggleNavBarRight()') Toggle Nav
+			#stickyheaderNavRight.col-xs-3.col-sm-3.col-md-3.col-lg-3(ng-show='navRightToggle')
 				#rightWidgetContainer.contentWrapper
 					.rightWidetWrapper#topTipsList(ng-hide='true')
 						#header(style='display:inline-block')
