--- a/views/tipLib.jade
+++ b/views/tipLib.jade
@@ -114,7 +114,7 @@ append body
 									span#currentTipId(ng-show="false")
 										{{currentTipId}}
 									span#currentTipIdToLoad(ng-show="false")
-										#{id}
+										span(ng-model='currentTipId') #{id}
 									#pointsDiv(style="float:right;margin-left:5px;margin-right:-13px;")
 										+label-default("{{tip.tipPoints}}")
 									h3(style="float:right;margin-top:20px;margin-top:15px;")
