--- a/views/packs-list.jade
+++ b/views/packs-list.jade
@@ -1,25 +1,46 @@
 		
-ul.panel-body.comment-detail-list(style='margin-top:25px;')
+ul.panel-body.comment-detail-list.packList(style='margin-top:5px;')
 	#header.row
 		div.col-sm-4.col-md-4.col-lg-4.col-xs-4.labelSort
 			.label.label-info Filter
 		select.dropdownWrapper.form-control-minus-width.col-sm-8.col-md-8.col-lg-8.col-xs-8(ng-model='$parent.packsFilter')
-				option(ng-repeat='sortFilter in $parent.packsFilterOptions' ng-value='{{sortFilter}}'  ng-selected="$index==2")
+				option(ng-repeat='sortFilter in $parent.packsFilterOptions' ng-value='sortFilter'  ng-selected="$index==2")
 					span {{sortFilter}}
 	div.row
 		div.col-sm-4.col-md-4.col-lg-4.col-xs-4.labelSort
 			.label.label-info Duration
 		select.dropdownWrapper.form-control-minus-width.col-sm-8.col-md-8.col-lg-8.col-xs-8(ng-model='$parent.packsFilterDuration')
-				option(ng-repeat='durationFilter in $parent.packsDurationOptions' ng-value='{{durationFilter}}' ng-selected="$index==2")
+				option(ng-repeat='durationFilter in $parent.packsDurationOptions' ng-value='durationFilter' ng-selected="$index==2")
 					span {{durationFilter}}
 	div(ng-repeat="pack in $parent.packs" style='display:inline:block')
 		div.packNavRow
-			div.packWrapper.cursor(style='float:left;background-size: contain;height: 100%;' ng-click='packClicked(pack)' id='pack{{pack._id}}' ng-class="{'active':pack.active}" ng-style="{'background-image': 'url(' + pack.packImageJson[0].image + ')'}")
-				div.packHeaderWrapper.row
-					h4
+			div.packWrapper.cursor(style='float:left;background-size: contain;' id='pack{{pack._id}}' ng-class="{'active':pack.active}" ng-style="{'background-image': 'url(' + pack.packImageJson[0].image + ')'}")
+				div.packHeaderWrapper.row(ng-click='packClicked(pack,$index)' ng-mouseover='packMouseOver(pack,$index)' ng-mouseleave='packMouseLeave(pack,$index)')
+					h4.packHeaderWrapper(ng-show='pack.showTitle')
 						span.packName {{pack.packname}}
-				div.packImageWrapper.row
-					//.div.profileImageWrapper.thumbnail()
-							img(ng-src='{{pack.packImageJson[0].image}}' style='')
+					div.packImageWrapper.row
+						//.div.profileImageWrapper.thumbnail()
+								img(ng-src='{{pack.packImageJson[0].image}}' style='')
+					div.packDescWrapper.row(ng-show='pack.showDesc')
+						span.packName {{pack.packname}} - 
+						p
+							span.packDesc {{pack.packdesc}}
+					div.buttonsRow.hover.minimize(ng-click='editPackClicked(pack,$index)' ng-show='pack.showDesc')
+						.div.buttonWrapper
+								span.glyphicon.glyphicon-edit
+	div#editPackWrapper(ng-show='editPackToggle')
+		div#audioMetaData(class='row' style='margin-left:10px')
+			div#bpmWrapper(class='col-sm-6 col-md-6 col-lg-6 col-xs-6')
+				span.small Title
+				input.form-control(ng-model='editPack.title' type='text')
+			div#keyWrapper(class='col-sm-6 col-md-6 col-lg-6 col-xs-6')
+				span.small Desc
+				textarea.form-control(ng-model='editPack.desc' type='text')
+			div#saveButton(class='col-sm-3 col-md-3 col-lg-3 col-xs-3' style='color:green')
+				button.btn.btn-default.btn-xs(ng-click="editPackSave()" style=";color:black;margin-left:5px;")
+					span.glyphicon.glyphicon-ok
+			div#cancelButton(class='col-sm-3 col-md-3 col-lg-3 col-xs-3' style='color:red')
+				button.btn.btn-default.btn-xs(ng-click="editPackCancel()" style=";color:black;margin-left:5px;")
+					span.glyphicon.glyphicon-remove
 			
 		
