--- a/views/sampleLib.jade
+++ b/views/sampleLib.jade
@@ -5,11 +5,14 @@ append body
 		div(style='text-align:center')
 			+alert-i-warning("The Sample Library is a place to upload or download your favorite samples!","heart")
 		
-		div.packListWrapper.col-sm-3.col-md-3.col-lg-2.col-xl-3
+		div.packListWrapper.col-sm-3.col-md-3.col-lg-3.col-xs-3
+			.div.row(style="text-align:center;")
+							+alert-i-warning("The Sample Library is a place to upload or download your favorite samples!","heart")
 			packs-list#packList
 		div#packAndSampleWidget.col-xs-6.col-sm-6.col-lg-7.col-md-6
+
 			div.filtersWrapper.row
-				.row.filterBoxStyle#stickyheader(ng-style="filtersBoxStyle" ng-show='true')
+				.row.filterBoxStyle#stickyheaderPackFilters(ng-style="filtersBoxStyle" ng-show='true')
 							div.filterWrapper#tipTypeFilterWrapper.btnWrapper.col-xs-3.col-sm-3.col-md-3.col-lg-3(style="margin-top:5px;")
 								//.label.label-default() Type:
 								div(style='display:inline-block')
@@ -42,9 +45,20 @@ append body
 								//.label.label-default() VST:
 								div(style='display:inline-block')
 									.label.label-primary(style='float:left;margin-top:5px;' ng-repeat="f in filters | orderBy: 'name'" ng-show="f.type == 'VST'" ng-class='{active:f.toggle}'  ng-click='filterClicked(f)') {{f.name}}
+			.packViewBanner.contentWrapper.row(ng-show="true" style='height: 300px;')
+					.div(ng-style="{'background-image': 'url(' + activePack.packImageJson[0].image + ')'}" style='background-size: cover;background-size: contain;height: 100%;')
+						//.div.profileImageWrapper.col-xs-2.col-sm-2.col-md-1.col-lg-1.thumbnail()
+							img(ng-src='{{profileInfo.profileImageJson[0].image}}' style='')
+						.div.activePackMetaData
+							.div.activePackNameWrapper.col-sm-12.col-md-6.col-lg-9.col-xs-12
+								h2.packName
+									span.packName {{activePack.packname}}
+						.div.activePackDesc
+							p.activePackDescWrapper.col-sm-12.col-md-6.col-lg.9.col-xs-12
+								span.packName {{activePack.packdesc}}
 			div.sampleListWrapper.row
 				samples-list(contentId = '1')
-		div#rightWidgetContainer.col-xs-3.col-sm-3.col-lg-3.col-md-3
+		div#rightWidgetContainer.col-xs-3.col-sm-3.col-lg-2.col-md-3
 			.rightWidetWrapper
 						#header(style='display:inline-block')
 							#labelSort
@@ -70,7 +84,7 @@ append body
 											span(ng-bind-html='user.profileMetaDataJson.lastName  | to_trusted' style='margin-left:2px;')
 										h6(ng-bind-html='user.profileMetaDataJson.city  | to_trusted' style='margin-top:-3px;margin-left:2px;')
 										span(ng-bind-html='user.profileMetaDataJson.bio  | to_trusted')
-		div#addContent.row
+	div#addContent.row(style='overflow:auto')
 			.imageUploaderInputWrapper(style="margin-top:5px;").col-xs-6.col-sm-6.col-lg-6.col-md-6
 						.inputWrapper(ng-show='adminAuth')
 							h4 Upload a pack
