--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -308,8 +308,9 @@ float:left;width:22%;
     color:#565656;
     padding:5px;
     border-radius: 5px;
-        height: 25px;
-	opacity: 1
+       
+	opacity: .8;
+	
 }
 #navBarWrapper{  
     background-color: white;
